Version 2.02.26 -
=================================
  Convert a lot of code pv dereferences to use get_pv_* functions.
  Suppress a couple benign warnings by adding variable initializations.
  Convert find_pv_in_vg_by_uuid and pv_create to use PV handles.
  Add get_pv_* functions to return PV members (external LVM library).
  Add wrappers to some functions in preparation for external LVM library.
  Allow vgcfgrestore to list metadata backup files using -f
  Add vg_check_status to consolidate vg status checks and error messages.
  Add pvdisplay --maps implementation.
  Fix vgcfgrestore man pg to show mandatory VG name and remove LVM1 options.
  Fix vgrename man page to include UUID and be consistent with lvrename.
  Add (experimental) OpenAIS support to clvmd.
  Remove symlinks if parent volume is deactivated.
  Fix and clarify vgsplit error messages.
  Fix a segfault if a device has no target (no table)
  Add some more debuglogs to clvmd startup.
  Misc clvmd cleanups

Version 2.02.25 - 27th April 2007
=================================
  Fix get_config_uint64() to read a 64-bit value not a 32-bit one.
  Add -Wformat-security and change one fprintf() to fputs().
  Move regex functions into libdevmapper.
  Change some #include lines to search only standard system directories.
  Add devices/preferred_names config regex list for displayed device names.
  Free a temporary dir string in fcntl_lock_file() after use.
  Fix a dm_pool_destroy() in matcher_create().
  Introduce goto_bad macro.
  Fix warnings on x86_64 involving ptrdiff_t in log_error messages.
  Update pvck to include text metadata area and record detection.
  Add support functions for token counting in config file extracts.
  Update pvck to read labels on disk, with --labelsector parameter.
  Add count_chars and count_chars_len functions.
  Add /sys/block listings to lvm_dump.sh.
  Make lvm_dump.sh list /dev recursively.
  Fix thread race in clvmd.
  Add scan_sector param to label_read and _find_labeller.